added the Plans and Progress section

--- a/html/project.html
+++ b/html/project.html
@@ -141,6 +141,66 @@
         across things such as construction and interior design. The directions in which the HUD glasses can be taken allows for a lot
         of avenues in which our glasses can be taken when targeting new census groups and consumers.
       </p>
+      <h2>Plans and Progress</h2>
+      <p>The project decided upon by the VibeCheck team was the AR supported glasses which we had named HUDFitness. Our acronym HUD
+        comes from Heads Up Display. After a lot of deliberation and drawbacks the final outcome (currently) decided upon by our team
+        includes the creation of the HUDFitness glasses as an accessory to a phone application which would allow the user to dictate
+        a multitude of things the glasses are capable of. Some of these functions include but are not limited to:
+      </p>
+      <ul>
+        <li>The intensity of the display (presets in the app) </li>
+        <li>What information the display will show.</li>
+        <li>Whether or not notification features should be enabled</li>
+        <li>What notifications will be shown on the display at any given time</li>
+        <li>Plot Routes and allow users the capability to see routes created by other user(if the other user decides to share the route)</li>
+        <li>Track progress and allow the user to display PB (themselves and others</li>
+        <li>Displaying average speed and projected speeds in comparison to other users data</li>
+        <li>The estimated intensity of there fitness (current session)</li>
+        <li>Advice on how much the glasses user needs to either pick up or lower the pace depending on the data collected from other user of the VR tech</li>
+        <li>A front facing camera by which users have the ability to record things and take pictures. (users will have full control of whether it is on or off)</li>
+      </ul>
+      <p>Basically the app will allow the user to customise the experience of their Glasses. Alongside the creation of the app and
+        the HUD glasses lenses, our group has decided to allot the glasses as an accessory via bluetooth connectivity, by which it
+        will also allow users to access apps that support AR tech in future, such as music, maps, etc once the apple glasses come out.
+        And finally the UI will be created using a laser projection, and the glasses will contain photopolymer materials which will
+        allow display the info being transmitted in AR in 2D. (see more details below about other tools added to the device)
+      </p>
+      <p>However, a project such as this has taken months of preparation to design and plan for, and yet all we currently have is
+        concepts and ideas for what the glasses that we are planning to create will be capable of doing. The concept of the HUDFitness
+        glasses came from Stephen’s dad, who mentioned he’d like a set of glasses which would be able to measure his speed and his 
+        time when going out, as it would relieve him of carrying a phone when cycling and running. After receiving the pitch from
+        his dad, Stephen designed the first initial HUDFitness prototype which had a few of the design qualities of the current end 
+        product, ranging from the bluetooth connectivity, and reliancy of the app in conjunction to the functioning of the glasses.
+      </p>
+      <p>After that, the design for the HUDFitness glasses was revised by the newly created ‘VibeCheck’ Team within the 2nd Assignment.
+        Through numerous discussions and deliberations about possible avenues in which the glasses could be taken down in terms or 
+        advancements and additives to the initial design it was still kept relatively similar to that of the initial design created in
+        A2, however more hardware was added to further bolster the few capabilities it had, such as:
+      </p>
+      <ul>
+        <li>the implementation of an improved battery inside which would allow it to last for a minimum of 4 hours before the device would need to be recharged</li>
+        <li>The UI’s intensity changing capabilities found on the app has been moved to the glasses frame allowing for on the fly changing (brighter intensity means faster depletion)</li>
+        <li>The framework for music connectivity and playing was mentioned, and implemented so that it would be available once iOS, android and other phone systems make their applications AR compatible.</li>
+      </ul>
+      <p>And finally during the final discussions of the possible solutions and functionality we could add to bolster the final product
+        in a market soon to be competitive (many large companies like Apple, Google and Microsoft are releasing their own AR glasses),
+        we had decided to add the following features:
+      </p>
+      <ul>
+        <li>Presets can be set on the accompanying application, which will allow the use rto create presets for multiple wearers or even just for different condition/ times of day.</li>
+        <li>Front facing camera to allow users to take pictures and even record short video clips that will be stored on the users phone in which the HUDFitness glasses will be connected to. (this feature is completely controlled by the user as to prevent any issues which may be connotated with an invasion of privacy).</li>
+        <li>Potential for eye-tracking functionality - both to optimise display, and, more excitingly, as a potential control mechanism. If the eye-tracking technology reached a viable level, users could use gestures such as ‘swiping’ their eyes across the display to control the phone.</li>
+      </ul>
+      <p>Although we at VibeCheck wish the best for the potential consumers of such a product, there are a variety of software and 
+        hardware functions that we have added which have the possibility of raising concern over things such as privacy. These features
+        include the glasses ability to store and use data in a mass collection to provide statistics to other users based on the users
+        details such as age and activity levels, and the front facing camera. To essentially kill 2 birds with one stone, users of 
+        this product will be able to opt out of both of these services upon setup of the, and installation of the application on the
+        users phone. And even if you accidentally allowed the HUDFitness share data and record clips/take pictures, these can be
+        opted out within the applications settings. Moreover, even if you opt into the services provided, ALL pictures and recordings
+        will be kept and shared on your devices, we don't receive anything. Also if you opt into sharing info (age group and activity
+        level), ALL the info is depersonalised and kept anonymous. 
+      </p>
       <h2>Scopes and Limits</h2>
       <p>The biggest limiting factor for such a technology is the cost of manufacturing of this new technology, and while we at
         VibeCheck wish to minimise the expenses of the consumer in the long run, this may take a multitude of years due to the multitude
