--- a/html/project.html
+++ b/html/project.html
@@ -61,7 +61,60 @@
         standards that were preset by the groups goals.
       </p>
       <h2>Landscape</h2>
-
+      <p>
+        In terms of competition, the market for AR glasses has a relatively small range of products (most of which are currently in their development phase). Despite the small size of the market, the competitors manage to pack in quite a large variety of products. There are a few main categories which define the parameters of the AR glasses market at the moment. We have analysed glasses based on price, processing, display, style, controls and target market. Not all of the AR glasses discussed have been released yet, so some of the specifications are merely speculation at this stage. 
+      </p>
+      <p>
+        Starting with price, Apple Glass surprisingly comes in with one of the lowest in the market, at a projected USD 499.[1] The Kopin SOLOS will also set users back USD 499.[2] Prices vary from there, with the Vuzix Blade Smart Glasses, North’s Focals and the Epson BT-300 Smart Glasses all coming below USD 1000.[3][4][5] Toshiba’s dynaEdge costs USD 1899.[6] However, the most expensive model by far is Microsoft’s HoloLens 2, at USD 3500.[7] While this price jump may seem exorbitant, it is not unjustified, as we will discuss below. 
+      </p>
+      <p>
+        Processing styles vary between the glasses. The HoloLens is one of the few AR Glasses to feature onboard processing, which allows for much faster computing and potentially offering a vastly improved user-experience.[7] Several models make use of phone connectivity - for example, the Apple Glass is reported to rely on users having an iPhone close at hand for use, much like their Apple Watch. This means they will most likely require a Wi-Fi connection, as Bluetooth speeds may not be able to handle the data transfer required for AR.[1] In a different approach, dynaEdge runs off a ‘pocket PC’ which, as the name suggests, is designed to sit in the wearer’s pocket.[6] 
+      </p>
+      <p>
+        There are also different styles of display. Firstly, it is important to make the distinction between heads-up display and true AR. With heads-up display, information is generally projected in front of the user’s field of view. With AR, the display ‘interacts’ with the user’s field-of-view - that is, the user’s view is incorporated into the display, and displayed elements are positioned and sized relative to real objects. Some reports claim that models such as the dynaEdge, Intel’s Vaunt and the Google Glass can only really be categorized under heads-up display.[6][8][9] Most other models are examples of actual AR. In terms of the display methods, many (including the HoloLens, Epson BT-300 Smart Glasses, SOLOS and the Vuzix Blade) use a holographic style, where images are projected onto the lens of the glasses.[2][3][5][7] The HoloLens has one of the best displays, with a 42˚ field of view and 47ppi resolution.[7] On the other hand, while the display method of the Apple Glass is as-of-yet unreleased, they have patented a ‘catadioptric lens’ which projects images directly on the lens of the wearer’s eyes, with the help of eye-tracking.[10] Intel’s Vaunt also projects images directly onto the user’s retina.[8] This could lead to unparalleled field of view and resolution.
+      </p>
+      <p> 
+        In terms of style - that is, the aesthetic design - the market for AR glasses sees a very large variety. The styling highlights the different focuses of companies when designing their glasses. North, a Canadian-based company, has taken the most discrete approach. Their holographic Focals are designed to look exactly like ordinary glasses.[4] Intel’s Vaunt glasses are going for the same goal, and weigh in at only 50g.[8] At the other end of the spectrum, the HoloLens weighs in at 566g.[7] This is due to its onboard computing - it has to carry a lot more than other models which rely on a phone. It also has a very bulky band with two rests to cushion the unit against the wearer’s head, to help cope with the large weight.[7] The BT-300 Smart Glasses are also quite obtrusive - they are able to sit over normal glasses - and they look more like a piece of futuristic technology than a pair of normal glasses.[5]
+      </p>
+      <p>
+        Different companies have gone with different methods for their controls. The dynaEdge is designed with a small touch sensor on the display unit, and several buttons on its ‘pocket PC’.[6] Several models choose to go with a trackpad style control - the BT-300 Smart Glasses have a remote-looking device which is actually attached to the glasses.[5] On the other hand, Intel’s Vaunt can be controlled with eye gestures - for example, sweeping the eyes to the right to dismiss a notification.[7] Vuzix have gone for both trackpad and voice control with their Blade glasses.[3] The most inconspicuous control comes from North - as one of their main goals is to create a very discrete experience, they have chosen to use the Amazon Echo Loop Smart Ring, so users can control the glasses without making distracting movements.[4]
+      </p>
+      <p>
+        The final category we are looking at is the target market. Kopin’s SOLOS has the most similar target market to the original iteration of our HUDFitness glasses. SOLOS is aimed at cyclists, runners and triathletes - it displays performance markers, such as distance, time, speed and heart rate, as well as allowing for phone calls, navigation and listening to music.[2] Some products are aimed at professionals only, such as the Google Glass or the dynaEdge, which are aimed at surgeons and manufacturers,[6][9] or the Vuzix Blade, which is aimed at construction managers.[3] Some companies, such as Intel, are taking a different approach. As of yet, Intel’s Vaunt does not have a target market - they are simply designing the technology to provide a new platform for developers to work with, and are waiting to see what direction they will take.[7]
+      </p>
+      <p>
+        The HUD Glasses don’t necessarily introduce any new features to the market, but we aim to combine the features in such a way that we are able to achieve both high functionality and a minimally-intrusive design.
+      </p>
+      <p style="font-size:0.8em;">
+        [1]K. Kozuch, "Apple Glass AR lenses: Release date, price, specs and leaks", Tom's Guide, 2020. [Online]. Available: https://www.tomsguide.com/news/apple-glasses. [Accessed: 24- May- 2020].
+      </p>
+      <p style="font-size:0.8em;">
+        [2]"Kopin SOLOS review - AR smart glasses for cyclists and runners", ANIWAA. [Online]. Available: https://www.aniwaa.com/product/vr-ar/kopin-solos/. [Accessed: 24- May- 2020].
+      </p>
+      <p style="font-size:0.8em;">
+        [3]"Vuzix Blade | Powering Solutions", Vuzix.com. [Online]. Available: https://www.vuzix.com/products/blade-smart-glasses. [Accessed: 24- May- 2020].
+      </p>
+      <p style="font-size:0.8em;">
+        [4]S. Charara and H. Sumra, "North's Focals are stylish Alexa smartglasses you'll actually wear and use", Wareable, 2018. [Online]. Available: https://www.wareable.com/wearable-tech/north-focals-smartglasses-price-specs-release-date-6646. [Accessed: 24- May- 2020].
+      </p>
+      <p style="font-size:0.8em;">
+        [5]E. Australia, "Epson Moverio Augmented Reality Smart Glasses - Epson Australia", Epson.com.au. [Online]. Available: https://www.epson.com.au/moverio-augmented-reality/default.asp. [Accessed: 24- May- 2020].
+      </p>
+      <p style="font-size:0.8em;">
+        [6]L. Goode, "Toshiba has made a completely unsexy pair of AR glasses", The Verge, 2018. [Online]. Available: https://www.theverge.com/2018/3/12/17101848/toshiba-dynaedge-ar-smart-glasses-headset-windows-10-pc. [Accessed: 24- May- 2020].
+      </p>
+      <p style="font-size:0.8em;">
+        [7]"HoloLens 2—Overview, Features, and Specs | Microsoft HoloLens", Microsoft.com. [Online]. Available: https://www.microsoft.com/en-us/hololens/hardware. [Accessed: 24- May- 2020].
+      </p>
+      <p style="font-size:0.8em;">
+        [8]"Exclusive: Intel's new smart glasses hands-on", YouTube, 2018. [Online]. Available: https://www.youtube.com/watch?v=bnfwClgheF0. [Accessed: 24- May- 2020].
+      </p>
+      <p style="font-size:0.8em;">
+        [9]A. Robertson, "Google announces a new $999 Glass augmented reality headset", The Verge, 2019. [Online]. Available: https://www.theverge.com/2019/5/20/18632689/google-glass-enterprise-edition-2-augmented-reality-headset-pricing. [Accessed: 24- May- 2020].
+      </p>
+      <p style="font-size:0.8em;">
+        [10]D. Nield, "A new patent appears showing Apple's smart AR/VR glasses", TechRadar, 2018. [Online]. Available: https://www.techradar.com/au/news/a-new-patent-appears-showing-apples-smart-arvr-glasses. [Accessed: 24- May- 2020].
+      </p>
 
       <h2>Aim and Goals</h2>
       <p> The ultimate aim of VibeChecks project is to not only produce and provide an AR service to consumers on a commercial level,
