--- a/html/project.html
+++ b/html/project.html
@@ -18,9 +18,8 @@
         <a href="pdf.html">Report PDFs</a>
         <a title="Click here to go to our GitHub repository" href="https://github.com/Stephen-McCluskey/IIT-A2">Our Repository</a>
       </div>
-      <h2 class="nobox tophead" style="padding-top: 30px;">Our Project</h2>
  
-      <h2 class="nobox">Assigment 3: Project Plan</h2>
+      <h2 class="nobox tophead">Assignment 3: Project Plan</h2>
       <h2 class="tophead">Topic</h2>
       <p>Our group ‘VibeCheck’ has decided to move forward with the initial proposal of the HUDFitness glasses from Stephen’s
         Assignment 1, and ‘VibeChecks’ Assignment 2. Our group VibeCheck had chosen this project for a multitude of reasons
@@ -230,7 +229,7 @@
         a minimum of 4 hours (with the first releases, but will continually get better and last longer).
       </p>
       
-      <h2 class="tophead">Assignment 2 Plan</h2>
+      <h2>Assignment 2 Plan</h2>
       <p>
         When our group decided to suggest creating a project which incorporates different aspects of ALL our individuals 
         ideas in assignment 1, we spent a significant portion of a group meeting attempting to all agree on the outcome,
