add "references" plus minor formatting

--- a/html/project.html
+++ b/html/project.html
@@ -84,36 +84,17 @@
       <p>
         The HUD Glasses don’t necessarily introduce any new features to the market, but we aim to combine the features in such a way that we are able to achieve both high functionality and a minimally-intrusive design.
       </p>
-      <p style="font-size:0.8em;">
-        [1]K. Kozuch, "Apple Glass AR lenses: Release date, price, specs and leaks", Tom's Guide, 2020. [Online]. Available: https://www.tomsguide.com/news/apple-glasses. [Accessed: 24- May- 2020].
-      </p>
-      <p style="font-size:0.8em;">
-        [2]"Kopin SOLOS review - AR smart glasses for cyclists and runners", ANIWAA. [Online]. Available: https://www.aniwaa.com/product/vr-ar/kopin-solos/. [Accessed: 24- May- 2020].
-      </p>
-      <p style="font-size:0.8em;">
-        [3]"Vuzix Blade | Powering Solutions", Vuzix.com. [Online]. Available: https://www.vuzix.com/products/blade-smart-glasses. [Accessed: 24- May- 2020].
-      </p>
-      <p style="font-size:0.8em;">
-        [4]S. Charara and H. Sumra, "North's Focals are stylish Alexa smartglasses you'll actually wear and use", Wareable, 2018. [Online]. Available: https://www.wareable.com/wearable-tech/north-focals-smartglasses-price-specs-release-date-6646. [Accessed: 24- May- 2020].
-      </p>
-      <p style="font-size:0.8em;">
-        [5]E. Australia, "Epson Moverio Augmented Reality Smart Glasses - Epson Australia", Epson.com.au. [Online]. Available: https://www.epson.com.au/moverio-augmented-reality/default.asp. [Accessed: 24- May- 2020].
-      </p>
-      <p style="font-size:0.8em;">
-        [6]L. Goode, "Toshiba has made a completely unsexy pair of AR glasses", The Verge, 2018. [Online]. Available: https://www.theverge.com/2018/3/12/17101848/toshiba-dynaedge-ar-smart-glasses-headset-windows-10-pc. [Accessed: 24- May- 2020].
-      </p>
-      <p style="font-size:0.8em;">
-        [7]"HoloLens 2—Overview, Features, and Specs | Microsoft HoloLens", Microsoft.com. [Online]. Available: https://www.microsoft.com/en-us/hololens/hardware. [Accessed: 24- May- 2020].
-      </p>
-      <p style="font-size:0.8em;">
-        [8]"Exclusive: Intel's new smart glasses hands-on", YouTube, 2018. [Online]. Available: https://www.youtube.com/watch?v=bnfwClgheF0. [Accessed: 24- May- 2020].
-      </p>
-      <p style="font-size:0.8em;">
-        [9]A. Robertson, "Google announces a new $999 Glass augmented reality headset", The Verge, 2019. [Online]. Available: https://www.theverge.com/2019/5/20/18632689/google-glass-enterprise-edition-2-augmented-reality-headset-pricing. [Accessed: 24- May- 2020].
-      </p>
-      <p style="font-size:0.8em;">
-        [10]D. Nield, "A new patent appears showing Apple's smart AR/VR glasses", TechRadar, 2018. [Online]. Available: https://www.techradar.com/au/news/a-new-patent-appears-showing-apples-smart-arvr-glasses. [Accessed: 24- May- 2020].
-      </p>
+      <p></br>References:</p>
+      <p style="font-size:0.8em;">[1]K. Kozuch, "Apple Glass AR lenses: Release date, price, specs and leaks", Tom's Guide, 2020. [Online]. Available: https://www.tomsguide.com/news/apple-glasses. [Accessed: 24- May- 2020].</p>
+      <p style="font-size:0.8em;">[2]"Kopin SOLOS review - AR smart glasses for cyclists and runners", ANIWAA. [Online]. Available: https://www.aniwaa.com/product/vr-ar/kopin-solos/. [Accessed: 24- May- 2020].</p>
+      <p style="font-size:0.8em;">[3]"Vuzix Blade | Powering Solutions", Vuzix.com. [Online]. Available: https://www.vuzix.com/products/blade-smart-glasses. [Accessed: 24- May- 2020].</p>
+      <p style="font-size:0.8em;">[4]S. Charara and H. Sumra, "North's Focals are stylish Alexa smartglasses you'll actually wear and use", Wareable, 2018. [Online]. Available: https://www.wareable.com/wearable-tech/north-focals-smartglasses-price-specs-release-date-6646. [Accessed: 24- May- 2020].</p>
+      <p style="font-size:0.8em;">[5]E. Australia, "Epson Moverio Augmented Reality Smart Glasses - Epson Australia", Epson.com.au. [Online]. Available: https://www.epson.com.au/moverio-augmented-reality/default.asp. [Accessed: 24- May- 2020].</p>
+      <p style="font-size:0.8em;">[6]L. Goode, "Toshiba has made a completely unsexy pair of AR glasses", The Verge, 2018. [Online]. Available: https://www.theverge.com/2018/3/12/17101848/toshiba-dynaedge-ar-smart-glasses-headset-windows-10-pc. [Accessed: 24- May- 2020].</p>
+      <p style="font-size:0.8em;">[7]"HoloLens 2—Overview, Features, and Specs | Microsoft HoloLens", Microsoft.com. [Online]. Available: https://www.microsoft.com/en-us/hololens/hardware. [Accessed: 24- May- 2020].</p>
+      <p style="font-size:0.8em;">[8]"Exclusive: Intel's new smart glasses hands-on", YouTube, 2018. [Online]. Available: https://www.youtube.com/watch?v=bnfwClgheF0. [Accessed: 24- May- 2020].</p>
+      <p style="font-size:0.8em;">[9]A. Robertson, "Google announces a new $999 Glass augmented reality headset", The Verge, 2019. [Online]. Available: https://www.theverge.com/2019/5/20/18632689/google-glass-enterprise-edition-2-augmented-reality-headset-pricing. [Accessed: 24- May- 2020].</p>
+      <p style="font-size:0.8em;">[10]D. Nield, "A new patent appears showing Apple's smart AR/VR glasses", TechRadar, 2018. [Online]. Available: https://www.techradar.com/au/news/a-new-patent-appears-showing-apples-smart-arvr-glasses. [Accessed: 24- May- 2020].</p>
 
       <h2>Aim and Goals</h2>
       <p> The ultimate aim of VibeChecks project is to not only produce and provide an AR service to consumers on a commercial level,
