add top padding to first h2

--- a/html/project.html
+++ b/html/project.html
@@ -19,7 +19,7 @@
         <a title="Click here to go to our GitHub repository" href="https://github.com/Stephen-McCluskey/IIT-A2">Our Repository</a>
       </div>
  
-      <h2 class="nobox tophead">Assignment 3: Project Plan</h2>
+      <h2 class="nobox tophead" style="padding-top: 30px;">Assignment 3: Project Plan</h2>
       <h2 class="tophead">Topic</h2>
       <p>Our group ‘VibeCheck’ has decided to move forward with the initial proposal of the HUDFitness glasses from Stephen’s
         Assignment 1, and ‘VibeChecks’ Assignment 2. Our group VibeCheck had chosen this project for a multitude of reasons
